// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scatter using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot scatter"
    >
      <circle
        class="scatter-point"
        cx="25"
        cy="25"
        r="0"
        style="stroke: rgb(107, 135, 154); fill: rgba(153, 193, 220, 0.7); opacity: 0.7;"
      />
      <circle
        class="scatter-point"
        cx="50"
        cy="50"
        r="0"
        style="stroke: rgb(107, 135, 154); fill: rgba(153, 193, 220, 0.7); opacity: 0.7;"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Scatter using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot scatter"
    />
  </svg>
</DocumentFragment>
`;

exports[`Scatter using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot scatter"
    />
  </svg>
</DocumentFragment>
`;
